# sample-meson

./: .gitignore  meson.build
include/: sample1.h  sample2.h
src/: main.c  meson.build  sample1.c  sample2.c
subprojects/: .gitignore
tests/: commonTest.h  meson.build  sample1Test.cpp  sample2Mock.cpp  sample2Mock.h
